--- a/hürth-blüht-2020.tex
+++ b/hürth-blüht-2020.tex
@@ -21,7 +21,7 @@
 \section{Einführung}
 Im nun zweiten Jahr von Hürth-blüht wollen wir die Entwicklung der Flächen betrachten und auch 4 neue Flächen vorstellen, die in 2020 angelegt wurden.
 
-In Frühjahr wurde in einem Treffen von BUND, Stadt Hürth und Stadtwerken das Projekt besprochen und das Jahr geplant. Dabei wurden neue Flächen beschloßen und ausgesucht sowie die Vorgehensweise besprochen.
+Im Frühjahr wurde in einem Treffen von BUND, Stadt Hürth und Stadtwerken das Projekt besprochen und das Jahr geplant. Dabei wurden neue Flächen beschloßen und ausgesucht sowie die Vorgehensweise besprochen.
 
 Die zunehmend trockenen Sommer sind auch für die Blühflächen eine Herausforderung. Insgesamt kommen die Flächen aber gut damit zurecht, deutlich besser als kurzgemähten Wiesen.
 Es gibt jedoch auch Probleme an besonders trockenen Standorten, wie etwa dem Hürther Bogen.
