--- a/hürth-blüht-2020.tex
+++ b/hürth-blüht-2020.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[10pt]{article}
 \usepackage{ngerman}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
@@ -19,9 +19,12 @@
 \newpage
 
 \section{Einführung}
-Im nun zweiten Jahr von Hürth-blüht wollen wir die Entwicklung der Flächen betrachten und auch 4 neue Flächen vorstellen, die in 2020 angelegt wurden.
+Im nun zweiten Jahr von \textbf{Hürth-blüht} wollen wir die Entwicklung der Flächen betrachten und auch 4 neue Flächen vorstellen, die in 2020 angelegt wurden.
 
-In Frühjahr wurde in einem Treffen von BUND, Stadt Hürth und Stadtwerken das Projekt besprochen und das Jahr geplant. Dabei wurden neue Flächen beschloßen und ausgesucht sowie die Vorgehensweise besprochen.
+In Frühjahr wurde bei einem Treffen von BUND, Stadt Hürth und Stadtwerken das Projekt besprochen und das Jahr geplant. Dabei wurden neue Flächen beschloßen und ausgesucht sowie die Vorgehensweise besprochen.
+Es wurde u.a. eine Streifenmahd beschloßen, wobei bei der Mahd eine Streifen stehen gelassen wird, um Insekten weiterhin Nahrung und Deckung zu bieten.
+
+Das Projekt \textbf{Hürth-blüht} wurde zum Bundeswettbewerb "`Naturstadt"' eingereicht, war jedoch leider nicht erfolgreich. Es wurden insgesamt 322 Projektideen eingereicht, wovon nur 40 Beiträge ausgewählt wurden.
 
 Die zunehmend trockenen Sommer sind auch für die Blühflächen eine Herausforderung. Insgesamt kommen die Flächen aber gut damit zurecht, deutlich besser als kurzgemähten Wiesen.
 Es gibt jedoch auch Probleme an besonders trockenen Standorten, wie etwa dem Hürther Bogen.
@@ -45,7 +48,7 @@ Die Blühflächen haben neben der Optik aber auch noch noch einen weiteren Grund
 Zustand der Fläche ist sehr gut.
 
 Der Effekt der Streifenmahd konnte hier gut beobachet werden.
-So waren im stehen gelassenen Teil weiterhin viele Insekten zu sehen, während im gemähten Teil die nächste Pflanzenarten hochwuchsen.
+So waren im stehen gelassenen Teil weiterhin viele Insekten zu sehen, während im gemähten Teil die nächsten Pflanzenarten hochwuchsen.
 
 Der neue Fahrradweg hat einen Teil abgeschnitten. 
 Dies sollte am anderen Ende der Fläche wieder angefügt werden.
@@ -59,11 +62,11 @@ Hier konnten viele, blütenbesuchende Insekten beobachtet werden.
 
 \begin{figure}[h!]
   \centering
-  \begin{subfigure}[b]{0.4\linewidth}
+  \begin{subfigure}[b]{0.41\linewidth}
     \includegraphics[width=\linewidth]{img/pinselkaefer.jpg}
     \caption{Pinselkäfer}
   \end{subfigure}
-  \begin{subfigure}[b]{0.48\linewidth}
+  \begin{subfigure}[b]{0.50\linewidth}
     \includegraphics[width=\linewidth]{img/schmalbock.jpg}
     \caption{Rothalsbock}
   \end{subfigure}
@@ -215,7 +218,7 @@ Trotz allem blühte es auch hier und einige Insekten wurden beobachtet.
 
 \begin{figure}[h!]
   \centering
-  \begin{subfigure}[b]{0.31\linewidth}
+  \begin{subfigure}[b]{0.45\linewidth}
     \includegraphics[width=\linewidth]{img/bogen/mai.jpg}
     \caption{trockener Mai}
   \end{subfigure}
@@ -274,7 +277,7 @@ Von den neuen Flächen ist diese am besten angegegangen. Aber auch hier ist noch
   \caption{Am Lintacker 28. April 2020}
 \end{figure}
 
-Hier wurde recht spät eingesät und wohl auch etwas zu tief. Daher dominierten hier der Gänsefuß.
+Hier wurde recht spät eingesät und wohl auch etwas zu tief. Daher dominierte hier der Gänsefuß.
 Nächstes Jahr sollte es besser aussehen.
 
 \clearpage
