--- a/hürth-blüht-2020.tex
+++ b/hürth-blüht-2020.tex
@@ -51,14 +51,21 @@ Zustand der Fläche ist sehr gut.
 Der Effekt der Streifenmahd konnte hier gut beobachet werden.
 So waren im stehen gelassenen Teil weiterhin viele Insekten zu sehen, während im gemähten Teil die nächsten Pflanzenarten hochwuchsen.
 
-Der neue Fahrradweg hat einen Teil abgeschnitten. 
+Der neue Fahrradweg wird vermutl. einen Teil abschneiden. 
 Dies sollte am anderen Ende der Fläche wieder angefügt werden.
 
-Hier konnten viele, blütenbesuchende Insekten beobachtet werden.
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.45\linewidth]{img/burgpark/baustelle.jpg}
+  \caption{Baustelle an und auf Blühfläche}
+  \label{fig:boat1}
+\end{figure}
 
 \end{flushleft}
 
 \newpage
+
 \textbf{Insekten im Burgpark:}
 
 \begin{figure}[h!]
@@ -81,6 +88,8 @@ Hier konnten viele, blütenbesuchende Insekten beobachtet werden.
   \end{subfigure}
   \caption{Insekten Burgpark}
 \end{figure}
+
+Auf der Blühfläche im Burpark konnten viele, blütenbesuchende Insekten beobachtet werden.
 
 \newpage
 \section{Gesamtschule}
@@ -250,6 +259,8 @@ Trotz allem blühte es auch hier und einige Insekten wurden beobachtet.
   \end{subfigure}
   \caption{Insekten Hürther Bogen}
 \end{figure}
+
+Die Geldbinden-Furchenbiene ist eine Art warmer trockener Standorte, dies passt zum trockenen Standort der Blühfläche am Hürther Bogen.
 
 \clearpage
 \section{Berrenratherstr.}
