--- a/hürth-blüht-2020.tex
+++ b/hürth-blüht-2020.tex
@@ -19,20 +19,19 @@
 \newpage
 
 \section{Einführung}
-Im nun zweiten Jahr von \textbf{Hürth-blüht} wollen wir die Entwicklung der Flächen betrachten und auch 4 neue Flächen vorstellen, die in 2020 angelegt wurden.
+Im nun zweiten Jahr von \textbf{Hürth-blüht} wollen wir die Entwicklung der Flächen betrachten und auch 4 neue Flächen vorstellen, die im Jahr 2020 angelegt wurden.
 
 
-Im Frühjahr wurde bei einem Treffen von BUND, Stadt Hürth und Stadtwerken das Projekt besprochen und das Jahr geplant. Dabei wurden neue Flächen beschloßen und ausgesucht sowie die Vorgehensweise besprochen.
-Es wurde u.a. eine Streifenmahd beschloßen, wobei bei der Mahd eine Streifen stehen gelassen wird, um Insekten weiterhin Nahrung und Deckung zu bieten.
+Im Frühjahr wurde bei einem Treffen von BUND, Stadt Hürth und Stadtwerken das Projekt besprochen und das Vorgehen über das Jahr geplant. Es wurde beschlossen, weitere Flächen auszusuchen und die Durchführung einer Streifenmahd. Dies bedeutet, dass bei der Mahd regelmäßig ein Streifen stehen gelassen wird, um Insekten weiterhin Nahrung und Deckung zu bieten.
 
-Das Projekt \textbf{Hürth-blüht} wurde zum Bundeswettbewerb "`Naturstadt"' eingereicht, war jedoch leider nicht erfolgreich. Es wurden insgesamt 322 Projektideen eingereicht, wovon nur 40 Beiträge ausgewählt wurden.
+Das Projekt \textbf{Hürth-blüht} wurde zum Bundeswettbewerb "`Naturstadt"' eingereicht, war jedoch leider nicht erfolgreich. Von insgesamt 322 eingereichten Projektideen wurden nur 40 Beiträge ausgewählt.
 
-Die zunehmend trockenen Sommer sind auch für die Blühflächen eine Herausforderung. Insgesamt kommen die Flächen aber gut damit zurecht, deutlich besser als kurzgemähten Wiesen.
-Es gibt jedoch auch Probleme an besonders trockenen Standorten, wie etwa dem Hürther Bogen.
+Die zunehmend trockenen Sommer sind auch für die Blühflächen eine Herausforderung. Insgesamt kommen die Flächen aber damit zurecht, deutlich besser als kurzgemähte Wiesen.
+Es gibt jedoch auch Probleme an besonders trockenen Standorten, wie etwa am Hürther Bogen.
 
-Die Resonanzen aus der Bevölkerung waren durchaus positiv. So wurde häufig beobachtet wie Selfies vor den Blühflächen gemacht wurden, auch wurden Blumensträuße für Oma gepflückt und manche Passanten wähnten sich bereits im Urlaub.
+Die Resonanz aus der Bevölkerung war durchaus positiv. So wurde häufig beobachtet, wie Fotos von den Blühflächen gemacht wurden, auch wurden Blumensträuße gepflückt und manche Passanten wähnten sich bereits im Urlaub.
 
-Die Blühflächen haben neben der Optik aber auch noch noch einen weiteren Grund: Dem Insektensterben und dem Verlust an Artenvielfalt entegegen zu treten. Die botanische Vielfalt konnte allein schon durch die Blühwiesen erhöht werden. Die Flächen wurden auch durch etliche Insekten angenomen, deutlich mehr als in den umliegenden gemähten Flächen. Jedoch meistens eher häufige Arten, vermisst werden weiterhin z.B.: Blutströpfchen, Dickkopffalter und Große Heupferde.
+Die Blühflächen haben neben der Optik aber auch noch einen weiteren Grund: Dem Insektensterben und dem Verlust an Artenvielfalt entgegen zu treten. Die botanische Vielfalt konnte allein schon durch die Blühwiesen erhöht werden. Die Flächen wurden auch durch etliche Insekten angenommen, deutlich mehr als in den umliegenden gemähten Flächen. Jedoch meistens eher durch häufige Arten, vermisst werden weiterhin Arten wie: Blutströpfchen, Dickkopffalter und Großes Heupferd.
 
 
 \newpage
@@ -49,10 +48,10 @@ Die Blühflächen haben neben der Optik aber auch noch noch einen weiteren Grund
 Zustand der Fläche ist sehr gut.
 
 Der Effekt der Streifenmahd konnte hier gut beobachet werden.
-So waren im stehen gelassenen Teil weiterhin viele Insekten zu sehen, während im gemähten Teil die nächsten Pflanzenarten hochwuchsen.
+So waren im ungemähten Abschnitt weiterhin viele Insekten zu sehen, während im gemähten Bereich die nächsten Pflanzenarten hochwuchsen.
 
-Der neue Fahrradweg wird vermutl. einen Teil abschneiden. 
-Dies sollte am anderen Ende der Fläche wieder angefügt werden.
+Der neue Fahrradweg wird vermutl. eine Teilfläche abschneiden. 
+Diese sollte am anderen Ende der Fläche wieder ergänzt werden.
 
 
 \begin{figure}[h!]
@@ -89,7 +88,7 @@ Dies sollte am anderen Ende der Fläche wieder angefügt werden.
   \caption{Insekten Burgpark}
 \end{figure}
 
-Auf der Blühfläche im Burpark konnten viele, blütenbesuchende Insekten beobachtet werden.
+Auf der Blühfläche im Burgpark konnten viele blütenbesuchende Insekten beobachtet werden.
 
 \newpage
 \section{Gesamtschule}
@@ -99,11 +98,11 @@ Auf der Blühfläche im Burpark konnten viele, blütenbesuchende Insekten beobac
   \label{fig:boat1}
 \end{figure}
 
-Nach einem eher mageren Start in 2019 ist die Fläche 2020 sehr gut angegangen.
+Nach einem eher mageren Start im Jahr 2019 ist die Vegetation auf der Fläche 2020 sehr gut angegangen.
 
-Hier wäre die Überlegung auch auf den Grünflächen des Parkplatz Blühflächen anzulegen.
+Hier wäre die Überlegung auch auf den angrenzenden Grünflächen des Parkplatzes Blühflächen anzulegen.
 
-Ein Highlight war eine auf Grashüpfer lauernde Wespenspinne im Spätsommer, im stehengelassen Teil.
+Eine Besonderheit war der Nachweis einer auf Grashüpfer lauernde Wespenspinne im Spätsommer im ungemähten Bereich.
 
 
 \begin{figure}[h!]
@@ -127,10 +126,10 @@ Ein Highlight war eine auf Grashüpfer lauernde Wespenspinne im Spätsommer, im 
 \end{figure}
 Der Blühstreifen wurde versehentlich im April gemäht, daher gab es hier einen etwas schwierigen Start und eine magere Margeriten-Phase.
 
-Im weiteren Verlauf hat die Fläche aber gut aufgeholt, trotz der Trockenheit. 
-Es gibt jedoch ein paar sehr trockenen Störstellen, insgesamt aber kein Grund zur Sorge. 
+Im weiteren Verlauf hat die Vegetation auf der Fläche aber gut aufgeholt, trotz der Trockenheit. 
+Es gibt jedoch ein paar sehr trockene Störstellen, insgesamt besteht aber kein Grund zur Sorge. 
 
-Im August stand auch die umgebene Fläche recht hoch. Hier wäre zu überlegen ob statt des geschwungenen Blühstreifen die gesamte Fläche als Blühstreifen behandelt werden sollte.
+Im August stand auch das Gras auf der umgebenden Fläche recht hoch. Hier wäre zu überlegen, ob statt des schmalen, geschwungenen Blühstreifens die gesamte Fläche in einen Blühstreifen umgewandelt werden sollte.
 
 \clearpage
 \section{Frechenerstr.}
@@ -139,9 +138,9 @@ Im August stand auch die umgebene Fläche recht hoch. Hier wäre zu überlegen o
   \caption{Frechenerstr. 29. Mai 2020}
 \end{figure}
 
-Der Blühstreifen an sich ist gut entwickelt, geht jedoch etwas unter in der größeren umgebenen hochstehenden Wiese.
+Der Blühstreifen an sich ist gut entwickelt, geht jedoch etwas unter in der größeren umgebenden hochstehenden Wiese.
 
-Hier wäre es gut wenn die gesamte Fläche sich zur Blühfläche entwickelt. Der Mahdplan müßte dann entsprechend angepasst werden.
+Hier wäre es besser, wenn die gesamte Fläche sich zur Blühfläche entwickeltn würde. Der Mahdplan müsste dann entsprechend angepasst werden.
 
 \clearpage
 \section{Sielsdorf}
@@ -162,7 +161,7 @@ Der Blühstreifen zwischen Fahrradweg und Straße ist gut entwickelt und blüht 
 \end{figure}
 
 Die Fläche ist klein und etwas schattig und wird bedrängt von Brombeeren aus den umgebenden Hecken.
-Dennoch ist sie gut entwickelt. Auffällig ist der viele Rainfarn in der Fläche.
+Dennoch ist sie gut entwickelt. Auffällig ist der häufige Rainfarn in der Fläche.
 
 Hier wurde im Juni komplett gemäht, die Fläche war jedoch bald wieder voll in Blüte.
 
@@ -174,7 +173,7 @@ Hier wurde im Juni komplett gemäht, die Fläche war jedoch bald wieder voll in 
   \label{fig:randkanal juni}
 \end{figure}
 
-Die 2 Blühflächen innerhalb der Kompensationsfläche sind gut entwickelt.
+Die zwei Blühflächen innerhalb der Kompensationsfläche sind gut entwickelt.
 
 Viele Insekten lassen sich dort beobachten, was sicherlich auch an der Größe der Fläche insgesamt liegt und auch an der unversiegelten Umgebung.
 
@@ -210,7 +209,7 @@ Viele Insekten lassen sich dort beobachten, was sicherlich auch an der Größe d
 \end{figure}
 
 Auch hier wurde laut Anwohner versehentlich im Frühjahr gemäht.
-Die Fläche hat sich später dann gut entwickelt. 
+Die Fläche hat sich später dennoch gut entwickelt. 
 
 \clearpage
 \section{Hürther Bogen}
@@ -219,8 +218,8 @@ Die Fläche hat sich später dann gut entwickelt.
   \caption{Hürther Bogen 28. April 2020}
 \end{figure}
 
-Die Fläche insgesamt leidet sehr unter der Trockenheit.
-Hier ist es besonders trocken, vermutlich wegen der Hanglage und auch durch die Umgebung aus Straßen, Häusern und Beton. Dies führt zu einer weiteren Aufheizung und Verdunstung.
+Die Fläche leidet insgesamt sehr unter der Trockenheit.
+Hier ist es besonders trocken, vermutlich wegen der Hanglage und auch durch die Umgebung aus Straßen, Häusern und Beton, ggf. auch durch unterliegenden Bauschutt. Dies führt zu einer weiteren Aufheizung und Verdunstung.
 
 Evtl. sollte hier eine etwas andere Saatmischung verwendet werden, die mit arideren Bedingungen zurecht kommt.
 
@@ -228,11 +227,9 @@ Trotz allem blühte es auch hier und einige Insekten wurden beobachtet.
 
 \begin{figure}[h!]
   \centering
-  \begin{subfigure}[b]{0.45\linewidth}
-    \includegraphics[width=\linewidth]{img/bogen/mai.jpg}
-    \caption{trockener Mai}
-  \end{subfigure}
-  \caption{Hürther Bogen}
+  \includegraphics[width=0.45\linewidth]{img/bogen/mai.jpg}
+  \caption{Trockener Mai am Hürther Bogen}
+  \label{fig:trockener-mai}
 \end{figure}
 
 
@@ -269,7 +266,7 @@ Die Geldbinden-Furchenbiene ist eine Art warmer trockener Standorte, dies passt 
   \caption{Berrenratherstr. 2. August 2020}
 \end{figure}
 
-Diese große Fläche bietet einiges an Potential, auch im Verbund mit den weiteren Blühflächen in der Nähe.
+Diese große Fläche bietet einiges an Potenzial, auch im Verbund mit den weiteren Blühflächen in der Nähe.
 
 Durch die späte Aussaat im ersten Jahr war das Resultat noch nicht besonders überzeugend. Üblicherweise wird es im zweiten Jahr besser.
 
@@ -280,7 +277,7 @@ Durch die späte Aussaat im ersten Jahr war das Resultat noch nicht besonders ü
   \caption{Kendenich Friedhof. 4. September 2020}
 \end{figure}
 
-Von den neuen Flächen ist diese am besten angegegangen. Aber auch hier ist noch relativ viel Gänsefuß in der Fläche, der hoffentlich im nächsten Jahr weniger wird.
+Von den neuen Flächen ist die Aussaat hier am besten angegangen. Aber auch hier ist noch relativ viel Gänsefuß in der Fläche, der hoffentlich im nächsten Jahr im Bestand zurückgehen wird.
 
 \clearpage
 \section{Am Lintacker}
@@ -290,7 +287,7 @@ Von den neuen Flächen ist diese am besten angegegangen. Aber auch hier ist noch
 \end{figure}
 
 Hier wurde recht spät eingesät und wohl auch etwas zu tief. Daher dominierte hier der Gänsefuß.
-Nächstes Jahr sollte es besser aussehen.
+Nächstes Jahr sollte sich die Vegetation artenreicher entwickeln.
 
 \clearpage
 \section{De Bütt}
@@ -301,17 +298,17 @@ Nächstes Jahr sollte es besser aussehen.
 
 Diese neu angelegte Fläche hat wegen einer Baumaßnahme nicht funktioniert.
 
-Im nächsten Jahr sollten wir beobachten ob dort doch etwas überlebt hat, ggf. sollte hier nochmal eingesät werden.
+Im nächsten Jahr sollten wir beobachten, ob dort doch etwas überlebt hat, ggf. müsste hier nochmal eingesät werden.
 
 \clearpage
 \section{Aussicht}
-Für 2021 werden wohl erstmal keine neuen Flächen angelegt werden, obwohl es noch potentielle Flächen gäbe.
+Im Jahr 2021 werden wohl erstmal keine neuen Flächen angelegt werden, obwohl es noch Potenzial gäbe.
 
-Zunächst muss einmal mit allen Beteiligten geprüft werden, wie der Vorgehensweise und Pflege der Flächen funktioniert hat.
+Zunächst muss noch mal mit allen Beteiligten geprüft werden, wie die Vorgehensweise und Pflege der Flächen funktioniert hat.
 
 Mögliche Erweiterungen an den Flächen sollten jedoch besprochen werden, auch um die Mäharbeiten zu erleichtern.
 
-Der BUND plant für 2021 einige Flächen per Handsense zu mähen, im Sinne einer schonenden, naturnahen und aktiven Pflege sowie weitere Kartierungen der Fauna und Flora auf und um die Blühflächen.
+Der BUND plant für 2021 einige Flächen per Handsense, im Sinne einer schonenden, naturnahen und aktiven Pflege  zu mähen und weitere Kartierungen der Fauna und Flora auf und um die Blühflächen herum durchzuführen.
 
 Die Webseite \href{https://hürth-blüht.de}{https://hürth-blüht.de} soll auch weiterhin gepflegt werden und über Neuigkeiten berichten.
 
