--- a/hürth-blüht-2020.tex
+++ b/hürth-blüht-2020.tex
@@ -16,6 +16,14 @@
   \includegraphics[width=\linewidth]{img/titel.jpg}
 \end{figure}
 
+Mitwirkende:
+\begin{itemize} 
+\item BUND Hürth: Martyna Bartolome, Ivo Bathke, Andreas Palm, Sebastian Schöne  
+\item Stadt Hürth
+\item Stadtwerke Hürth 
+\item Fotos: Ivo Bathke
+\end{itemize}
+
 \newpage
 
 \section{Einführung}
@@ -41,7 +49,6 @@ Die Blühflächen haben neben der Optik aber auch noch einen weiteren Grund: Dem
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{img/infotafeln.jpg}
   \caption{Burgpark}
-  \label{fig:boat1}
 \end{figure}
 
 \begin{flushleft}
@@ -58,7 +65,6 @@ Diese sollte am anderen Ende der Fläche wieder ergänzt werden.
   \centering
   \includegraphics[width=0.45\linewidth]{img/burgpark/baustelle.jpg}
   \caption{Baustelle an und auf Blühfläche}
-  \label{fig:boat1}
 \end{figure}
 
 \end{flushleft}
@@ -95,7 +101,6 @@ Auf der Blühfläche im Burgpark konnten viele blütenbesuchende Insekten beobac
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{img/gesamtschule/mai.jpg}
   \caption{Gesamtschule}
-  \label{fig:boat1}
 \end{figure}
 
 Nach einem eher mageren Start im Jahr 2019 ist die Vegetation auf der Fläche 2020 sehr gut angegangen.
@@ -129,7 +134,7 @@ Der Blühstreifen wurde versehentlich im April gemäht, daher gab es hier einen 
 Im weiteren Verlauf hat die Vegetation auf der Fläche aber gut aufgeholt, trotz der Trockenheit. 
 Es gibt jedoch ein paar sehr trockene Störstellen, insgesamt besteht aber kein Grund zur Sorge. 
 
-Im August stand auch das Gras auf der umgebenden Fläche recht hoch. Hier wäre zu überlegen, ob statt des schmalen, geschwungenen Blühstreifens die gesamte Fläche in einen Blühstreifen umgewandelt werden sollte.
+Auch die umgebenden Fläche stand teilweise recht hoch. Hier wäre ein Vorschlag des BUNDs zu überlegen, ob statt des schmalen, geschwungenen Blühstreifens die gesamte Fläche in einen Blühstreifen umgewandelt werden sollte und nur an den Rändern zur Verkehrssicherheit gemäht wird.
 
 \clearpage
 \section{Frechenerstr.}
@@ -140,14 +145,13 @@ Im August stand auch das Gras auf der umgebenden Fläche recht hoch. Hier wäre 
 
 Der Blühstreifen an sich ist gut entwickelt, geht jedoch etwas unter in der größeren umgebenden hochstehenden Wiese.
 
-Hier wäre es besser, wenn die gesamte Fläche sich zur Blühfläche entwickeltn würde. Der Mahdplan müsste dann entsprechend angepasst werden.
+Hier wäre es besser, wenn die gesamte Fläche sich zur Blühfläche entwickeln würde.
 
 \clearpage
 \section{Sielsdorf}
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{img/sielsdorf/juni.jpg}
   \caption{Sielsdorf 24. Juni 2020}
-  \label{fig:sielsdorf}
 \end{figure}
 
 Der Blühstreifen zwischen Fahrradweg und Straße ist gut entwickelt und blüht sehr vielfältig.
@@ -157,7 +161,6 @@ Der Blühstreifen zwischen Fahrradweg und Straße ist gut entwickelt und blüht 
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{img/heristal/mai.jpg}
   \caption{Heristalstr. 22. Mai 2020}
-  \label{fig:boat1}
 \end{figure}
 
 Die Fläche ist klein und etwas schattig und wird bedrängt von Brombeeren aus den umgebenden Hecken.
@@ -170,7 +173,6 @@ Hier wurde im Juni komplett gemäht, die Fläche war jedoch bald wieder voll in 
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{img/randkanal/juni.jpg}
   \caption{Randkanal 24. Juni 2020}
-  \label{fig:randkanal juni}
 \end{figure}
 
 Die zwei Blühflächen innerhalb der Kompensationsfläche sind gut entwickelt.
@@ -219,7 +221,7 @@ Die Fläche hat sich später dennoch gut entwickelt.
 \end{figure}
 
 Die Fläche leidet insgesamt sehr unter der Trockenheit.
-Hier ist es besonders trocken, vermutlich wegen der Hanglage und auch durch die Umgebung aus Straßen, Häusern und Beton, ggf. auch durch unterliegenden Bauschutt. Dies führt zu einer weiteren Aufheizung und Verdunstung.
+Hier ist es besonders trocken, vermutlich wegen der Hanglage und auch durch die Umgebung aus Straßen, Häusern und Beton. Dies führt zu einer weiteren Aufheizung und Verdunstung.
 
 Evtl. sollte hier eine etwas andere Saatmischung verwendet werden, die mit arideren Bedingungen zurecht kommt.
 
@@ -229,7 +231,6 @@ Trotz allem blühte es auch hier und einige Insekten wurden beobachtet.
   \centering
   \includegraphics[width=0.45\linewidth]{img/bogen/mai.jpg}
   \caption{Trockener Mai am Hürther Bogen}
-  \label{fig:trockener-mai}
 \end{figure}
 
 
@@ -286,7 +287,7 @@ Von den neuen Flächen ist die Aussaat hier am besten angegangen. Aber auch hier
   \caption{Am Lintacker 28. April 2020}
 \end{figure}
 
-Hier wurde recht spät eingesät und wohl auch etwas zu tief. Daher dominierte hier der Gänsefuß.
+Hier wurde recht spät eingesät. Daher dominierte hier der Gänsefuß.
 Nächstes Jahr sollte sich die Vegetation artenreicher entwickeln.
 
 \clearpage
@@ -311,6 +312,5 @@ Mögliche Erweiterungen an den Flächen sollten jedoch besprochen werden, auch u
 Der BUND plant für 2021 einige Flächen per Handsense, im Sinne einer schonenden, naturnahen und aktiven Pflege  zu mähen und weitere Kartierungen der Fauna und Flora auf und um die Blühflächen herum durchzuführen.
 
 Die Webseite \href{https://hürth-blüht.de}{https://hürth-blüht.de} soll auch weiterhin gepflegt werden und über Neuigkeiten berichten.
-
 
 \end{document}
