--- a/hürth-blüht-2020.tex
+++ b/hürth-blüht-2020.tex
@@ -145,7 +145,7 @@ Auch die umgebenden Fläche stand teilweise recht hoch. Hier wäre ein Vorschlag
 
 Der Blühstreifen an sich ist gut entwickelt, geht jedoch etwas unter in der größeren umgebenden hochstehenden Wiese.
 
-Hier wäre es besser, wenn die gesamte Fläche sich zur Blühfläche entwickeln würde.
+Hier wäre es wünschenswert, wenn die gesamte Fläche sich zur Blühfläche entwickeln würde.
 
 \clearpage
 \section{Sielsdorf}
@@ -258,7 +258,7 @@ Trotz allem blühte es auch hier und einige Insekten wurden beobachtet.
   \caption{Insekten Hürther Bogen}
 \end{figure}
 
-Die Geldbinden-Furchenbiene ist eine Art warmer trockener Standorte, dies passt zum trockenen Standort der Blühfläche am Hürther Bogen.
+Die Gelbbinden-Furchenbiene ist eine Art warmer trockener Standorte, dies passt zum trockenen Standort der Blühfläche am Hürther Bogen.
 
 \clearpage
 \section{Berrenratherstr.}
